Signup form is working and several other components updated